# csci499_aranke

./: README.md  Vagrantfile  bootstrap.sh
project/: CMakeLists.txt  README.md
project/protos/: func.proto  key_value_store.proto  warble.proto
project/src/: CMakeLists.txt  backend_kv_store_server.cxx  database.cpp  database.h  func.cpp  func.h  func_client.cpp  func_client.h  func_main.cpp  func_server.cpp  func_server.h  key_value_store.cpp  key_value_store.h  key_value_store_client.cpp  key_value_store_client.h  key_value_store_main.cpp  key_value_store_server.cc  key_value_store_server.cpp  key_value_store_server.h  kv_tags.h  test_file.cxx  warble_main.cpp
project/src/cmake/: HunterGate.cmake
project/test/: CMakeLists.txt  fake_key_value_store.cpp  fake_key_value_store.h  test_func.cpp  test_func.h  test_key_value_store.cpp  test_key_value_store.h
project/test/test_key_value_store/: CMakeLists.txt  test_key_value_store.cpp  test_key_value_store.h  test_key_value_store_server.cpp  test_key_value_store_server.h
project/tst/: CMakeLists.txt  backend_kv_store_client.cxx  main_test.cpp
